src/server/run/snapshots/viguno__server__run__hpo_omims__test__hpo_omims_name_suffix_with_hpo_terms.snap
---
source: src/server/run/hpo_omims.rs
expression: "&run_query(web_server_data.clone(),\n                \"/hpo/omims?name=tel-Manzke+syndrome&match=suffix&hpo_terms=true\").await?"
---
version:
  hpo: 2024-07-01
  viguno: 0.0.0
query:
  omim_id: ~
  name: tel-Manzke syndrome
  match_: suffix
  max_results: 100
  hpo_terms: true
result:
  - omim_id: "OMIM:616145"
    name: Catel-Manzke syndrome
    hpo_terms:
      - term_id: "HP:0000007"
        name: Autosomal recessive inheritance
      - term_id: "HP:0000023"
        name: Inguinal hernia
      - term_id: "HP:0000028"
        name: Cryptorchidism
      - term_id: "HP:0000160"
        name: Narrow mouth
      - term_id: "HP:0000162"
        name: Glossoptosis
      - term_id: "HP:0000175"
        name: Cleft palate
      - term_id: "HP:0000193"
        name: Bifid uvula
      - term_id: "HP:0000201"
        name: Pierre-Robin sequence
      - term_id: "HP:0000204"
        name: Cleft upper lip
      - term_id: "HP:0000218"
        name: High palate
      - term_id: "HP:0000293"
        name: Full cheeks
      - term_id: "HP:0000316"
        name: Hypertelorism
      - term_id: "HP:0000347"
        name: Micrognathia
      - term_id: "HP:0000369"
        name: Low-set ears
      - term_id: "HP:0000460"
        name: Narrow nose
      - term_id: "HP:0000470"
        name: Short neck
      - term_id: "HP:0000476"
        name: Cystic hygroma
      - term_id: "HP:0000520"
        name: Proptosis
      - term_id: "HP:0000579"
        name: Nasolacrimal duct obstruction
      - term_id: "HP:0000582"
        name: Upslanted palpebral fissure
      - term_id: "HP:0000767"
        name: Pectus excavatum
      - term_id: "HP:0000768"
        name: Pectus carinatum
      - term_id: "HP:0000954"
        name: Single transverse palmar crease
      - term_id: "HP:0001181"
        name: Adducted thumb
      - term_id: "HP:0001250"
        name: Seizure
      - term_id: "HP:0001263"
        name: Global developmental delay
      - term_id: "HP:0001373"
        name: Joint dislocation
      - term_id: "HP:0001382"
        name: Joint hypermobility
      - term_id: "HP:0001511"
        name: Intrauterine growth retardation
      - term_id: "HP:0001537"
        name: Umbilical hernia
      - term_id: "HP:0001629"
        name: Ventricular septal defect
      - term_id: "HP:0001651"
        name: Dextrocardia
      - term_id: "HP:0001680"
        name: Coarctation of aorta
      - term_id: "HP:0001762"
        name: Talipes equinovarus
      - term_id: "HP:0001831"
        name: Short toe
      - term_id: "HP:0002623"
        name: Overriding aorta
      - term_id: "HP:0002650"
        name: Scoliosis
      - term_id: "HP:0002857"
        name: Genu valgum
      - term_id: "HP:0003097"
        name: Short femur
      - term_id: "HP:0003577"
        name: Congenital onset
      - term_id: "HP:0004209"
        name: Clinodactyly of the 5th finger
      - term_id: "HP:0005792"
        name: Short humerus
      - term_id: "HP:0008897"
        name: Postnatal growth retardation
      - term_id: "HP:0009464"
        name: Ulnar deviation of the 2nd finger
      - term_id: "HP:0009933"
        name: Narrow naris
      - term_id: "HP:0010049"
        name: Short metacarpal
      - term_id: "HP:0010763"
        name: Low insertion of columella
      - term_id: "HP:0012385"
        name: Camptodactyly
      - term_id: "HP:0030368"
        name: Hyperphalangy of the 2nd finger
      - term_id: "HP:0045074"
        name: Thin eyebrow
